<resources>
    <string name="app_name">Parchat</string>
    <string name="olvcontraseña"><u>¿Olvidaste tu contraseña?</u></string>
    <string name="iniciar"><u>Inicia sesión</u> </string>
    <string name="bienvenida">Bienvenido de nuevo</string>
    <string name="correo">Correo</string>
    <string name="contra">Contraseña</string>
    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="eresnuevo">¿Eres Nuevo?</string>
    <string name="crearUCuenta"><u>Crear una Cuenta</u></string>
    <string name="crearCuenta">Crear una Cuenta</string>
    <string name="nombreUsuario">Nombre de Usuario</string>
    <string name="registarse">Registrarse</string>
    <string name="tienesCuenta">¿Ya tienes una cuenta?</string>
    <string name="recuperarContra">Recuperar Contraseña</string>
    <string name="correoRecuperacion">Ingrese su Correo electronico</string>
    <string name="descripcion">En esta sección el usuario debe colocar una breve descripción sobre el. Puede indicar sus gustos o pasatiempos.</string>
    <string name="enviar">Enviar</string>
    <string name="edad">Edad:</string>
    <string name="ciudad">Ciudad:</string>
    <string name="valorEdadyCiudad">#</string>
    <string name="redes">Redes Sociales</string>
    <string name="chats">Chats</string>
    <string name="title_activity_crear_evento">CrearEvento</string>
    <string name="mensaje">Mensaje</string>
    <string name="lugar">Lugar</string>
    <string name="nombreEvento">Nombre del evento</string>
    <string name="publicar">Publicar</string>
    <string name="fecha">Fecha del evento</string>
    <string name="volver"><u>Volver</u></string>
    <string name="confirmar_contra">Confirmar Contraseña</string>
    <string name="mis_eventos">Mis Eventos</string>
    <string name="cambiar_foto"><u>Cambiar foto</u></string>
    <string name="describete">Describete,pasatiempos, gustos musicales, etc.</string>
    <string name="facebook">Facebook:</string>
    <string name="instagram">Instagram:</string>
    <string name="tiktok">TikTok:</string>
    <string name="twitter">Twitter:</string>
    <string name="link">Link</string>
    <string name="guardar">Guardar</string>
    <string name="galeria">Galeria</string>
    <string name="camara">Camara</string>
    <string name="aceptar">Aceptar</string>
    <string name="confirmar">Guardar</string>
    <string name="eliminar">Eliminar</string>
    <string name="editar">Editar</string>
    <string name="unirse">Unirse</string>
    <string name="genero">Genero:</string>
    <string name="interes">Interes:</string>
    <string name="nombre">Nombre</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="crear_evento">Crear Evento</string>
    <string name="matchs">Matchs</string>
    <string name="perfil">Perfil</string>
    <string name="perfil_usuario">Perfil Usuario</string>
    <string name="rechazar">Rechazar</string>
    <string name="imagen_usuario">Imagen Usuario</string>
    <string name="no_hay_perfiles">No hay mas perfiles disponibles</string>
    <string name="eventosHoy">Eventos de hoy</string>
    <string-array name="generos">
        <item>Seleccione</item>
        <item>Hombre</item>
        <item>Mujer</item>
        <item>Otro</item>
    </string-array>
    <string name="title_activity_dia_evento">DiaEvento</string>
</resources>