<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCEBD9"
    tools:context=".opcionesEvento">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/barraBuscar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/borderstyle"
        android:backgroundTint="#B3FFFFFF"
        android:hint="@string/lugar"
        android:textSize="24sp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_margin="15dp"/>

    <TextView
        android:id="@+id/nEvento"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/borderstyle"
        android:backgroundTint="#B3FFFFFF"
        android:hint="@string/nombreEvento"
        android:textSize="24sp"
        android:gravity="center_vertical"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="75dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>

    <TextView
        android:id="@+id/fecha"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/borderstyle"
        android:backgroundTint="#B3FFFFFF"
        android:hint="@string/fecha"
        android:textSize="24sp"
        android:gravity="center_vertical"
        android:layout_marginTop="135dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:layout_margin="20dp">

        <Button
            android:id="@+id/imageButton11"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:background="@drawable/boton"
            android:backgroundTint="#B3FCEBD9"
            android:fontFamily="@font/roboto_medium"
            android:onClick="editarEvento"
            android:text="@string/editar"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/imageButton12"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:background="@drawable/boton"
            android:backgroundTint="#B3FF5F6D"
            android:fontFamily="@font/roboto_medium"
            android:onClick="eliminarEvento"
            android:text="@string/eliminar"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_margin="10dp"/>
    </LinearLayout>

</FrameLayout>