<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Match"
    android:background="#FFFFFF">

    <FrameLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:background="#FCEBD9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FCEBD9"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="60sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/menu"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_menu"
            android:tint="@color/black"
            android:layout_gravity="center|end"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <ImageView
            android:id="@+id/imagenMatch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/imagen_usuario"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/user3" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="5dp"
            android:background="@drawable/borderlayout">

            <TextView
                android:id="@+id/nombreMatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lugarMatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nombreMatch" />

            <LinearLayout
                android:id="@+id/linearLayout8"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:background="@drawable/borderlayout"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageButton
                    android:id="@+id/rechazarButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00FCEBD9"
                    android:contentDescription="@string/rechazar"
                    app:srcCompat="@drawable/ic_baseline_cancel_24" />

                <ImageButton
                    android:id="@+id/aceptarButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00FCEBD9"
                    android:contentDescription="@string/aceptar"
                    app:srcCompat="@drawable/ic_baseline_favorite_24" />

                <ImageButton
                    android:id="@+id/perfilButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00FCEBD9"
                    android:contentDescription="@string/perfil_usuario"
                    app:srcCompat="@drawable/ic_baseline_person_24" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:background="#FCBAC3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FCBAC3"
            android:onClick="goToProfile"
            app:srcCompat="@drawable/ic_baseline_account_circle_24"
            android:contentDescription="@string/perfil" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FCBAC3"
            app:srcCompat="@drawable/ic_baseline_loyalty_24"
            android:contentDescription="@string/matchs" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FCBAC3"
            android:onClick="goToChats"
            app:srcCompat="@drawable/ic_baseline_chat_24"
            android:contentDescription="@string/chats" />

        <ImageButton
            android:id="@+id/imageButtonEvent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FCBAC3"
            android:onClick="goToCreateEvent"
            app:srcCompat="@drawable/ic_baseline_event_24"
            android:contentDescription="@string/crear_evento" />
    </LinearLayout>

    <TextView
        android:id="@+id/editProfileOption"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/editar_perfil"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="60dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/matchsOption"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:visibility="gone"
        android:text="@string/matchs"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfileOption" />

    <TextView
        android:id="@+id/signOutOption"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:visibility="gone"
        android:text="@string/cerrar_sesi_n"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/matchsOption" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <TextView
        android:id="@+id/noHayPerfilesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/no_hay_perfiles"
        android:textSize="20sp"
        android:textColor="#9A1111"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"/>
</androidx.constraintlayout.widget.ConstraintLayout>